--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -9,7 +9,7 @@ body {
     color: var(--dark);
 
     background-color: #f3f6f9;
-    padding-bottom: 300px;
+    // padding-bottom: 500px;
 }
 
 .container {
