--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,10 +16,9 @@
 @import "./sections/evacuators";
 @import "./sections/info";
 @import "./sections/price";
-// @import "./sections/footer";
+@import "./sections/footer";
 
 // Blocks
 @import "./blocks/btn";
 @import "./blocks/text-style";
-// @import "./blocks/button";
-// @import "./blocks/pagecrm";
+@import "./blocks/menu-burger";
