--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -1,4 +1,5 @@
 .header {
+    overflow: hidden;
     display: flex;
     justify-content: space-between;
 
@@ -35,7 +36,7 @@
 .header__nav {
     display: flex;
     align-items: center;
-
+    gap: 20px;
     @include breakpoint(sm) {
         a.header__button {
             display: none;
