--- a/scss/sections/_price.scss
+++ b/scss/sections/_price.scss
@@ -1,9 +1,11 @@
+.price {
+    padding-bottom: toRemResp(24, 100);
+}
+
 .tabs {
-    // @include resp(padding-bottom, 24, 100);
     display: flex;
     flex-wrap: wrap;
     max-width: 1400px;
-    // box-shadow: 2px 2px 10px 2px rgba(39, 52, 58, 0.15);
     filter: drop-shadow(2px 2px 2px rgba(39, 52, 58, 0.15));
 }
 
