--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -5,11 +5,8 @@ html {
 body {
     font-family: var(--font-family);
     font-weight: 400;
-    font-optical-sizing: auto;
     color: var(--dark);
-
     background-color: #f3f6f9;
-    // padding-bottom: 500px;
 }
 
 .container {
@@ -19,15 +16,15 @@ body {
     padding: 0 15px;
 }
 
-a1 {
-    opacity: 0.9;
-    transition: opacity 0.2s ease-in-out, text-shadow 0.2s ease-in-out;
+// a1 {
+//     opacity: 0.9;
+//     transition: opacity 0.2s ease-in-out, text-shadow 0.2s ease-in-out;
 
-    &:hover {
-        opacity: 1;
-        text-shadow: 0 0 4px #d795ff;
-    }
-}
+//     &:hover {
+//         opacity: 1;
+//         text-shadow: 0 0 4px #d795ff;
+//     }
+// }
 
 .visually-hidden {
     /* Contain text within 1px box */
