--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -1,5 +1,13 @@
 .header {
-    overflow: hidden;
+    position: fixed;
+    z-index: 9;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backdrop-filter: blur(20px);
+    transition: 0.6s linear;
+
+    // overflow: hidden;
     display: flex;
     justify-content: space-between;
 
@@ -18,12 +26,13 @@
 
 .header__logo {
     width: 112px;
-    height: 112px;
+    height: 88px; // height: 112px;
+    margin: 12px 0px;
     overflow: hidden;
 
     img {
         width: 100%;
-        height: auto;
+        height: 100%;
         object-fit: cover;
     }
 
@@ -31,6 +40,30 @@
         width: 64px;
         height: 64px;
     }
+}
+
+.header.sticky {
+    // background:rgba($color: #000000, $alpha: 1.0);
+    top: -2px;
+    background-color: rgba(255, 255, 255, 0.1);
+    // box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+        rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+
+    transition: 0.6s linear;
+}
+
+.header.sticky .header__logo {
+    margin: 0px 0px;
+    transition: 0.4s linear;
+}
+
+.header__logo:not(.header.sticky) {
+    transition: 0.4s linear;
 }
 
 .header__nav {
@@ -54,6 +87,31 @@
     font-size: $fz-16-20;
     text-transform: uppercase;
     text-wrap: nowrap;
+
+    .header__menu-item a {
+        position: relative;
+        font-family: var(--font-family);
+        font-weight: 400;
+        font-size: 20px;
+        text-transform: uppercase;
+        color: var(--dark);
+    }
+
+    .header__menu-item a::before {
+        content: "";
+        position: absolute;
+        bottom: -0.3rem;
+        right: 0;
+        width: 0%;
+        height: 0.1rem;
+        background-color: var(--main-blue);
+        transition: 0.3s linear;
+    }
+
+    a:hover::before {
+        left: 0;
+        width: 100%;
+    }
 
     @include breakpoint(md) {
         display: none;
