--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* Reset and base styles  */
 * {
   padding: 0px;
@@ -193,7 +192,14 @@ body {
 }
 
 .header {
-  overflow: hidden;
+  position: fixed;
+  z-index: 9;
+  top: 0;
+  left: 0;
+  width: 100%;
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  transition: 0.6s linear;
   display: flex;
   justify-content: space-between;
   padding: 0px 100px;
@@ -212,12 +218,13 @@ body {
 
 .header__logo {
   width: 112px;
-  height: 112px;
+  height: 88px;
+  margin: 12px 0px;
   overflow: hidden;
 }
 .header__logo img {
   width: 100%;
-  height: auto;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -226,6 +233,24 @@ body {
     width: 64px;
     height: 64px;
   }
+}
+
+.header.sticky {
+  top: -2px;
+  background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  transition: 0.6s linear;
+}
+
+.header.sticky .header__logo {
+  margin: 0px 0px;
+  transition: 0.4s linear;
+}
+
+.header__logo:not(.header.sticky) {
+  transition: 0.4s linear;
 }
 
 .header__nav {
@@ -248,6 +273,28 @@ body {
   text-transform: uppercase;
   text-wrap: nowrap;
 }
+.header__menu .header__menu-item a {
+  position: relative;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 20px;
+  text-transform: uppercase;
+  color: var(--dark);
+}
+.header__menu .header__menu-item a::before {
+  content: "";
+  position: absolute;
+  bottom: -0.3rem;
+  right: 0;
+  width: 0%;
+  height: 0.1rem;
+  background-color: var(--main-blue);
+  transition: 0.3s linear;
+}
+.header__menu a:hover::before {
+  left: 0;
+  width: 100%;
+}
 @media screen and (max-width: 768px) {
   .header__menu {
     display: none;
@@ -265,6 +312,10 @@ body {
   font-size: min(20px, 16px + 4 * (100vw - 360px) / 1560);
   text-transform: uppercase;
   color: #fff;
+}
+
+.hero {
+  margin-top: 142px;
 }
 
 .hero__content {
@@ -1471,6 +1522,9 @@ body {
 
 .menu {
   display: none;
+  overflow: hidden;
+  border-bottom-left-radius: 20px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 .header__burger-btn {
@@ -1481,7 +1535,7 @@ body {
   background-color: transparent;
   border: none;
   outline: none;
-  z-index: 2;
+  z-index: 99;
   cursor: pointer;
 }
 @media screen and (max-width: 768px) {
@@ -1518,7 +1572,6 @@ body {
   transform: translateY(10px);
 }
 
-/* Крестик */
 .header.open .header__burger-btn span {
   background-color: white;
 }
@@ -1537,10 +1590,36 @@ body {
 
 .menu__list {
   display: none;
-  align-items: center;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+  align-items: left;
+  padding-top: 2rem;
+}
+.menu__list .menu__item:not(:last-child) {
+  margin-bottom: 1.6rem;
+}
+.menu__list .menu__item a {
+  display: block;
+  position: relative;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 20px;
+  text-transform: capitalize;
+  color: #fff;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.menu__list .menu__item a::before {
+  content: "";
+  position: absolute;
+  bottom: -0.3rem;
+  right: 0;
+  width: 0%;
+  height: 0.1rem;
+  background-color: #fff;
+  transition: 0.3s linear;
+}
+.menu__list .menu__item a:hover::before {
+  left: 0;
+  width: 100%;
 }
 
 @media screen and (max-width: 768px) {
@@ -1553,24 +1632,17 @@ body {
     top: -330px;
     right: 0;
     width: 300px;
-    padding: 75px 20px 20px 20px;
+    padding: 56px 20px 30px 30px;
     background-color: var(--main-blue);
     transition: transform 0.5s, visibility 0.5s;
     will-change: transform;
   }
   .menu__list {
-    display: block;
+    display: flex;
+    flex-direction: column;
   }
   .menu__item:not(:last-child) {
     margin-right: 0;
-  }
-  .menu__link {
-    color: white;
-    display: block;
-    padding: 10px;
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 20px;
   }
   .header.open .menu {
     transform: translateY(130%);
