--- a/scss/blocks/_menu-burger.scss
+++ b/scss/blocks/_menu-burger.scss
@@ -70,7 +70,7 @@
 
 .menu__list {
     display: none;
-    align-items: left;
+    align-items: start;
     padding-top: 2rem;
 
     .menu__item:not(:last-child) {
