--- a/scss/blocks/_text-style.scss
+++ b/scss/blocks/_text-style.scss
@@ -1,34 +1,34 @@
 .h2-text {
     font-family: var(--font-family);
     font-weight: 700;
-    @include resp(font-size, 32, 40);
+    font-size: toRemResp(32, 40);
     color: var(--dark);
 }
 
 .h3-text {
     font-family: var(--font-family);
     font-weight: 700;
-    @include resp(font-size, 20, 26);
+    font-size: toRemResp(20, 26);
     color: var(--dark);
 }
 
 .p-text {
     font-family: var(--font-family);
     font-weight: 400;
-    @include resp(font-size, 20, 26);
+    font-size: toRemResp(20, 26);
     color: var(--dark);
 }
 
 .card-title {
     font-family: var(--font-family);
     font-weight: 700;
-    @include resp(font-size, 18, 20);
+    font-size: toRemResp(18, 20);
     color: var(--dark);
 }
 
 .card-desc {
     font-family: var(--font-family);
     font-weight: 400;
-    @include resp(font-size, 16, 20);
+    font-size: toRemResp(16, 20);
     color: var(--dark);
 }
