--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -103,12 +103,12 @@
         bottom: -0.3rem;
         right: 0;
         width: 0%;
-        height: 0.1rem;
+        height: 0.12rem;
         background-color: var(--main-blue);
         transition: 0.3s linear;
     }
 
-    a:hover::before {
+    .header__menu-item a:hover::before {
         left: 0;
         width: 100%;
     }
