--- a/scss/sections/_what-inside.scss
+++ b/scss/sections/_what-inside.scss
@@ -4,19 +4,21 @@
 }
 
 .what-inside__title {
-    font-weight: 700;
-    font-size: 40px;
+    // font-weight: 700;
+    // font-size: 40px;
     margin-bottom: 48px;
 }
 
-.what-inside__desc {
-    font-weight: 400;
-    font-size: 26px;
-}
+// .what-inside__desc {
+//     font-weight: 400;
+//     font-size: 26px;
+// }
 
 .what-inside__text {
+    font-family: var(--font-family);
     font-weight: 700;
-    font-size: 26px;
+    font-size: toRemResp(20, 26);
+    color: var(--dark);
 }
 
 .what-inside__box {
