--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -4,7 +4,7 @@
     --yellow: #ffcd00;
 
     --font-family: "SF Pro Text", sans-serif;
-    --second-family: "SF Pro Rounded", sans-serif;
+    // --second-family: "SF Pro Rounded", sans-serif;
 }
 
 // Colors
